--- a/sass/sass/_header.scss
+++ b/sass/sass/_header.scss
@@ -187,6 +187,9 @@
                 min-width: auto;
                 padding: .2em .8em;
             }
+            &:focus{
+                box-shadow: 0 0px 0px 2px $aFocus;
+            }
         }
     }
     .btn_grp {
