--- a/sass/sass/_slick.scss
+++ b/sass/sass/_slick.scss
@@ -96,7 +96,7 @@
                 right: 0;
                 bottom: 0;
                 z-index: 99;
-                @include box-shadow(0px 0px 0px 2px $aHover inset);
+                @include box-shadow(0px 0px 0px 2px $aFocus inset);
             }
         }
     }
@@ -121,7 +121,7 @@
     &:hover, &:focus {
         border: none !important;
         outline: none;
-        box-shadow: 0px 0px 0px 2px $aHover inset;
+        box-shadow: 0px 0px 0px 2px $aFocus inset;
     }
 }
 /* 上一則 位置 圖片*/
