--- a/sass/sass/_form.scss
+++ b/sass/sass/_form.scss
@@ -188,6 +188,7 @@ select::-ms-expand {
             }
             label{
                 @include gutter(.6em);
+                padding-top: 5px;
             }
             @include screen('mobile'){
                 @include gutter();
